Increased Z-index of menu fix
Set as 1000 rather than 10 to reduce chances of other z-index issues (it needs to be under 1030 to fix the initial bug).

--- a/css/joomla.css
+++ b/css/joomla.css
@@ -403,7 +403,7 @@ body.admin.com_civicrm #root-menu-div div.outerbox:first-of-type {
 	margin-left: 20px;
 } 
 body.admin.com_civicrm div.outerbox {
-	z-index: 10;
+	z-index: 1000;
 }
 
 /* Shoreditch-specific */
